# magicli

./: .gitignore  README.md  magicli.py  pyproject.toml
.github/workflows/: lint.yml  pytest.yml  release.yml
tests/: fixtures.py  test_calling_frame.py  test_cli.py  test_first_function.py  test_get_function_to_call.py  test_get_kwargs.py  test_help.py  test_magicli.py  test_parse_kwarg.py  test_parse_short_options.py  test_type_to_cast.py
