[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project.scripts]
magicli = "magicli:magicli"

[project]
name = "magicli"
authors = [{name = "Patrick Elmer", email = "patrick@elmer.ws"}]
readme = "README.md"
description = "Automatically generates a CLI from functions."
dynamic = ["version"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Home = "https://github.com/PatrickElmer/magicli"
